--- a/index.html
+++ b/index.html
@@ -4,51 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <form action="race/">
-      <h1>Race Registration!</h1>
+    <h1>I am Hemru Chamuditha</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam veritatis
+      dolorum dolorem at rem hic ipsum veniam amet vel perferendis, molestiae
+      aliquam tempore perspiciatis impedit quidem obcaecati suscipit provident
+      inventore.
+    </p>
 
-      <p>
-        <label for="firstName">First Name</label>
-        <input type="text" id="firstName" required />
-
-        <label for="lastName">Last Name</label>
-        <input type="text" id="lastName" required />
-      </p>
-      <p>
-        <label for="raceType">Select a Race:</label>
-        <br /><br />
-
-        <input type="radio" id="funRun" name="marthonType" value="fun"/>
-        <label for="funRun">Fun Run 5k</label><br />
-
-        <input type="radio" id="halfMarathon" name="marthonType" />
-        <label for="halfMarathon">Half Marathon</label><br />
-
-        <input type="radio" id="fullMarathon" name="marthonType" />
-        <label for="fullMarathon">Full Marathon</label>
-      </p>
-
-      <p>
-        <label for="email">Email:</label>
-        <input type="email" id="email" required />
-
-        <label for="password">Password:</label>
-        <input type="password" id="password" />
-      </p>
-
-      <p>
-        <label for="ageGroups">Select a Age Group:</label>
-        <select name="age" id="ageGroups">
-          <option value="under18">Under 18</option>
-          <option value="18-30">18-30</option>
-          <option value="30-50">30-50</option>
-          <option value="50+">50+</option>
-        </select>
-        <br />
-        <button>submit</button>
-      </p>
-    </form>
+    <button>Click here</button>
   </body>
 </html>
