practise css file

--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>I am Hemru Chamuditha</h1>
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam veritatis
-      dolorum dolorem at rem hic ipsum veniam amet vel perferendis, molestiae
-      aliquam tempore perspiciatis impedit quidem obcaecati suscipit provident
-      inventore.
+      hy this is paragrpah one Lorem ipsum dolor sit amet consectetur
+      adipisicing elit. Quis commodi sunt maiores sequi quidem iure nulla,
+      suscicing elit. Quis commodi sunt maiores seqicing elit. Quis commodi sunt maiores seq
+    </p>
+    <span>hemru</span><span>hemru</span>
+    <p>
+      hy this is paragrpah one Lorem ipsum dolor sit amet consectetur
+      adipisicing elit. Quis commodi sunt maiores sequi quidem iure nulla,
+      suscicing elit. Quis commodi sunt maiores seqicing elit. Quis commodi sunt maiores seq
     </p>
 
     <button>Click here</button>
