practise css file

--- a/index.html
+++ b/index.html
@@ -3,22 +3,39 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>CSS Selectors</title>
+
+    <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body>
-    <p>
-      hy this is paragrpah one Lorem ipsum dolor sit amet consectetur
-      adipisicing elit. Quis commodi sunt maiores sequi quidem iure nulla,
-      suscicing elit. Quis commodi sunt maiores seqicing elit. Quis commodi sunt maiores seq
-    </p>
-    <span>hemru</span><span>hemru</span>
-    <p>
-      hy this is paragrpah one Lorem ipsum dolor sit amet consectetur
-      adipisicing elit. Quis commodi sunt maiores sequi quidem iure nulla,
-      suscicing elit. Quis commodi sunt maiores seqicing elit. Quis commodi sunt maiores seq
-    </p>
 
-    <button>Click here</button>
+  <body>
+    <section>
+      <h1>this is header One</h1>
+      <h1></h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam,
+        molestias, aperiam totam sit doloremque minima quam cum sequi neque
+        dignissimos odio eligendi aspernatur. Quis expedita voluptatibus in
+        laudantium nulla consectetur.
+      </p>
+
+      <a href="">click here</a>
+    </section>
+
+
+    <section>
+      <h1>this is header One</h1>
+      <h1></h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam,
+        molestias, aperiam totam sit doloremque minima quam cum sequi neque
+        dignissimos odio eligendi aspernatur. Quis expedita voluptatibus in       
+        laudantium nulla consectetur.
+      </p>
+        <a href="">click here</a>
+        <button>click here</button>
+    </section>
+    <button>click here</button>
   </body>
 </html>
