practise css file

--- a/index.html
+++ b/index.html
@@ -11,31 +11,7 @@
 
   <body>
     <section>
-      <h1>this is header One</h1>
-      <h1></h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam,
-        molestias, aperiam totam sit doloremque minima quam cum sequi neque
-        dignissimos odio eligendi aspernatur. Quis expedita voluptatibus in
-        laudantium nulla consectetur.
-      </p>
-
-      <a href="">click here</a>
+     <button>Click here</button>
     </section>
-
-
-    <section>
-      <h1>this is header One</h1>
-      <h1></h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam,
-        molestias, aperiam totam sit doloremque minima quam cum sequi neque
-        dignissimos odio eligendi aspernatur. Quis expedita voluptatibus in       
-        laudantium nulla consectetur.
-      </p>
-        <a href="">click here</a>
-        <button>click here</button>
-    </section>
-    <button>click here</button>
   </body>
 </html>
