--- a/index.html
+++ b/index.html
@@ -3,15 +3,160 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CSS Selectors</title>
+    <title>Burger Mart</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Onest:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Onest:wght@100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
 
-    <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
-    <section>
-     <button>Click here</button>
+    <!-- Main navigation bar - START -->
+    <section class="burgurMainNavBar">
+      <nav class="mainNavBar navbar navbar-expand-lg fixed-top p-2 px-0">
+        <div class="container">
+          <a style="pointer-events: none" class="navbar-brand pe-2" href="#"
+            >Burger</a
+          >
+          <button
+            class="navbar-toggler shadow-none"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="noHover collapse navbar-collapse"
+            id="navbarSupportedContent"
+          >
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Cart</a>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link" href="#">profile</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Favorites</a>
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <input
+                class="form-control shadow-none me-2"
+                type="search"
+                placeholder="Find your Favorite.."
+                aria-label="Search"
+              />
+              <button class="btn btn-warning searchBtn" type="submit">
+                Search
+              </button>
+            </form>
+          </div>
+        </div>
+      </nav>
     </section>
+    <!-- Main navigation bar - END -->
+
+    <section class="container-fluid header">
+      <section
+        class="container burgerHeader border-bottom border-1 border-opacity-10"
+      >
+        <div class="row">
+          <div
+            class="column col-lg-6 headerDetails d-flex flex-column align-items-start justify-content-center"
+          >
+            <h1 class="pt-1">Burgar Mart</h1>
+            <p class="pt-0 pt-md-3 pb-3 burugerDetails">
+              Welcome to Burger Mart, your ultimate destination for
+              mouth-watering burgers crafted with passion and the freshest
+              ingredients. Whether you're craving a classic cheeseburger, a
+              gourmet creation, or a plant-based delight, our diverse menu has
+              something to satisfy every burger lover. At Burger Mart, we
+              believe in delivering exceptional taste and quality in every bite.
+              Join us for a delicious meal that will leave you coming back for
+              more!
+            </p>
+
+            <button class="orderBtn">Order Now</button>
+          </div>
+
+          <div class="column col-lg-6">
+            <img src="burger.png" class="img-fluid burgerImage" alt="" />
+          </div>
+        </div>
+      </section>
+
+      <!-- memories section -->
+      <section class="container px-0 mt-5 pt-5 memories">
+        <div class="row">
+          <div class="column col-lg-6 memoryImage">
+            <img src="two.jpg" class="img-fluid imageTwo" alt="" />
+          </div>
+          <div class="column col-lg-6 memoryDetials mb-5">
+            <h1 class="pb-5">Crafting Flavorful Memory</h1>
+            <p class="pb-5">
+              At Burger Mart, we believe that every meal is an opportunity to
+              create lasting memories. Our burgers are crafted with care,
+              combining the freshest ingredients, unique recipes, and a dash of
+              culinary passion. Each bite is designed to tantalize your taste
+              buds and transport you to a place of comfort and joy. Whether
+              you're celebrating a special occasion or simply enjoying a meal
+              with friends and family, we're here to make those moments
+              unforgettable with flavors that linger long after the last bite.
+              Join us at Burger Mart, where every burger tells a story and every
+              visit is a cherished memory in the making.
+            </p>
+
+            <div class="row">
+              <div class="column">
+                <button class="orderBtn me-1">Find out More</button>
+                <div class="d-inline-block">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-forward-fill telephone" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877zm10.761.135a.5.5 0 0 1 .708 0l2.5 2.5a.5.5 0 0 1 0 .708l-2.5 2.5a.5.5 0 0 1-.708-.708L14.293 4H9.5a.5.5 0 0 1 0-1h4.793l-1.647-1.646a.5.5 0 0 1 0-.708"/>
+                  </svg>
+                  <h3 class="d-inline-block ps-3 phoneNumber">076 5922708</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- memories section -->
+    </section>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
