--- a/index.html
+++ b/index.html
@@ -135,8 +135,18 @@
               <div class="column">
                 <button class="orderBtn me-1">Find out More</button>
                 <div class="d-inline-block">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-forward-fill telephone" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877zm10.761.135a.5.5 0 0 1 .708 0l2.5 2.5a.5.5 0 0 1 0 .708l-2.5 2.5a.5.5 0 0 1-.708-.708L14.293 4H9.5a.5.5 0 0 1 0-1h4.793l-1.647-1.646a.5.5 0 0 1 0-.708"/>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="16"
+                    height="16"
+                    fill="currentColor"
+                    class="bi bi-telephone-forward-fill telephone"
+                    viewBox="0 0 16 16"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877zm10.761.135a.5.5 0 0 1 .708 0l2.5 2.5a.5.5 0 0 1 0 .708l-2.5 2.5a.5.5 0 0 1-.708-.708L14.293 4H9.5a.5.5 0 0 1 0-1h4.793l-1.647-1.646a.5.5 0 0 1 0-.708"
+                    />
                   </svg>
                   <h3 class="d-inline-block ps-3 phoneNumber">076 5922708</h3>
                 </div>
@@ -146,6 +156,100 @@
         </div>
       </section>
       <!-- memories section -->
+
+      <section class="container mt-5 mb-5 pt-2 pb-5 cards">
+        <h1 class="pb-4">Our Menu</h1>
+        <div class="row">
+          <div class="column col-sm-6 col-md-4 col-lg-3 mb-4 myOne">
+            <div class="card">
+              <img src="three.jpg" class="card-img-top p-2" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Delicious Pork Chop</h5>
+                <p class="card-text">
+                  one of the best ways to bake pork chops is to start in an
+                  oven-safe skillet on the stove and then transfer them into a
+                  hot oven.
+                </p>
+                <a href="#" class="btn btn-primary">See More</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="column col-sm-6 col-md-4 col-lg-3 mb-3">
+            <div class="card">
+              <img src="four.jpg" class="card-img-top p-2" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Delicious Pork Chop</h5>
+                <p class="card-text">
+                  one of the best ways to bake pork chops is to start in an
+                  oven-safe skillet on the stove and then transfer them into a
+                  hot oven.
+                </p>
+                <a href="#" class="btn btn-primary">See More</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="column col-sm-6 col-md-4 col-lg-3 mb-3">
+            <div class="card" style="">
+              <img src="five.jpg" class="card-img-top p-2" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Delicious Pork Chop</h5>
+                <p class="card-text">
+                  one of the best ways to bake pork chops is to start in an
+                  oven-safe skillet on the stove and then transfer them into a
+                  hot oven.
+                </p>
+                <a href="#" class="btn btn-primary">See More</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="column col-sm-6 col-md-4 col-lg-3 mb-3">
+            <div class="card" style="">
+              <img src="six.jpg" class="card-img-top p-2" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Delicious Pork Chop</h5>
+                <p class="card-text">
+                  one of the best ways to bake pork chops is to start in an
+                  oven-safe skillet on the stove and then transfer them into a
+                  hot oven.
+                </p>
+                <a href="#" class="btn btn-primary">See More</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="column col-sm-6 col-md-4 col-lg-3 mb-3">
+            <div class="card" style="">
+              <img src="seven.jpg" class="card-img-top p-2 object-fit-fill" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Delicious Pork Chop</h5>
+                <p class="card-text">
+                  one of the best ways to bake pork chops is to start in an
+                  oven-safe skillet on the stove and then transfer them into a
+                  hot oven.
+                </p>
+                <a href="#" class="btn btn-primary">See More</a>
+              </div>
+            </div>
+          </div>
+          <div class="column col-sm-6 col-md-4 col-lg-3 mb-3">
+            <div class="card" style="">
+              <img src="eight.jpg" class="card-img-top p-2" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Delicious Pork Chop</h5>
+                <p class="card-text">
+                  one of the best ways to bake pork chops is to start in an
+                  oven-safe skillet on the stove and then transfer them into a
+                  hot oven.
+                </p>
+                <a href="#" class="btn btn-primary">See More</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </section>
 
     <script
